2.0.1

* Avoid setting 'sender:' header when :sender key included in message #46

2.0.0

* Update branching scheme
* Add debug support on SMTP session
* Support proper JavaMail SMTPS opts

1.11.4

* Support proper URLs for attachments so we're not limited to Files
* Add generic support javamail setting strings

1.11.3

* Fix infinite loop in sendmail-send

1.11.2

* Add sendmail parameter to sendmail-send
* commons-codec 1.9
* Encourage two-arg send-message

1.11.1

* Apply charset to subject

1.11.0

* Add charset support.

1.10.3

* Fix bug where nil user/pass will trigger authentication.

1.10.2

* Eliminate many instances of reflection.

1.10.1

* Don't include clojure in dependencies.

1.10.0

* Allow custom filename and description for attachments.

1.9.0

* Support custom message ID.
* Supply default, customizable user agent.

1.8.0

* Add nested multipart support.
* Allow explicit content-type.

1.7.2

* Remove dependency on org.clojure.contrib/repl-utils 1.3.0-alpha4.


